--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
 </head>
 <body>
 	<!--Start Header-->
@@ -76,16 +77,16 @@
                     </div>
                     <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
-                            <li class="active"><a href="index.html">Home</a>
+                            <li class="active"><a href="#header">Home</a>
                             </li>
 
-                            <li><a href="#">Services</a>                              
+                            <li><a href="#service_section">Services</a>                              
                             </li>                     
 
-                            <li><a href="contact.html">Recent Work</a>
+                            <li><a href="#recent_section">Recent work</a>
                             </li>
 
-                            <li><a href="contact.html">Contact</a>
+                            <li><a href="#contact_section">Contact</a>
                             </li>
 
                         </ul>
@@ -116,7 +117,7 @@
 		<!--End Slider-->
 		
 		<!--start info service-->
-		<section class="info_service">
+		<section class="info_service" id="service_section">
 			<div class="container">
 				<div class="row sub_content">
                         <div class="dividerHeading">
@@ -172,7 +173,7 @@
 		<!--end info service-->
 
 		<!--Start recent work-->
-		<section class="latest_work">
+		<section class="latest_work" id="recent_section">
 			<div class="container">
 				<div class="row sub_content">
 					<div class="carousel-intro">
@@ -321,7 +322,7 @@
 	</section>
 	
 	<!--start footer-->
-    <footer class="footer">
+    <footer class="footer" id="contact_section">
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 col-md-3 col-lg-3">
